Backend: add username policy validation (blocklist + regex), fix compile without Lombok; Frontend: surface 400 policy messages on Register/Home flows